<resources>
    <string name="app_name">Packerz &amp; Moverz</string>l
    <string name="logo">Logo</string>
    <string name="first_onboarding_message">First onboarding message</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="truck">Truck</string>
    <string name="fast_conven">Fast &amp; convenient Delivery</string>
    <string name="don_t_worry">
        Don\'t worry about your package we deliver every package\n on time to the correct location
    </string>
    <string name="services">Services</string>
    <string name="we_provide_">
        We provide you with all the services that you need when\n you move house or office
    </string>
    <string name="friendly_bu">Friendly budget</string>
    <string name="we_give_you">
        We give you the all the best friendly budget to move that\n is approximate to your estimation
    </string>
    <string name="trained_pro">Trained Professionals</string>
    <string name="you_get_tra">
        You get trained professionals who will do the impossible\n to pack and move items safely
    </string>
    <string name="getStarted">GET STARTED</string>
    <string name="enter_your_email"><font fgcolor="#808080">Enter your email</font></string>
    <string name="enter_your_password"><font fgcolor="#808080">Enter your password</font></string>
    <string name="log_inCaps">LOG IN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="new_here_">New here?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_upCaps">SIGN UP</string>
    <string name="enter_your_name"><font fgcolor="#808080">Enter your name</font></string>
    <string name="enter_your_phone_number"><font fgcolor="#808080">Enter your phone number</font></string>
    <string name="agree_terms_and_conditions">Agree terms and conditions</string>
    <string name="already_hav">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="enter_new_password"><font fgcolor="#808080">Enter new password</font></string>
    <string name="search_placeholder">What are you looking for…</string>
    <string name="search">Search</string>
    <string name="offers_for_">Offers for you!</string>
    <string name="image">image</string>
    <string name="packers_and_movers"><![CDATA[Packers & Movers]]></string>
    <string name="home_cleaning">Home Cleaning</string>
    <string name="repairs">Repairs</string>
    <string name="painting">Painting</string>
    <string name="location">Location</string>
    <string name="nairobi">Nairobi</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="title_activity_home">Home</string>
    <string name="profile">PROFILE</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="let_s_pack_and_move">Let\'s pack and move!</string>
</resources>