<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#FFFFFF"
    tools:context=".activities.Onboarding1"
    tools:targetApi="s">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:text="@string/skip"
        android:textAppearance="@style/skip"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="355dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:text="@string/next"
        android:textAppearance="@style/next"
        android:gravity="center_vertical" />

    <ImageView
        android:id="@+id/savings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/services"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/services" />

    <TextView
        android:id="@+id/services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/services"
        android:layout_below="@+id/savings"
        android:textAppearance="@style/services"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/we_provide_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/we_provide_"
        android:layout_below="@id/services"
        android:textAppearance="@style/we_provide_"
        android:gravity="center_vertical" />

</RelativeLayout>