<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Home">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="-25dp"
        android:background="@drawable/app_background" />

    <LinearLayout
        android:id="@+id/LinearLayoutIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/ic_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/location"
            android:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/nairobi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nairobi"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:textAppearance="@style/nairobi"
            android:gravity="center_vertical" />

        <ImageView
            android:id="@+id/ic_notif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/notification"
            android:src="@drawable/ic_notif" />

        <ImageView
            android:id="@+id/ic_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/help"
            android:src="@drawable/ic_help"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutIcons"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/search_rect"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="0dp">

        <ImageView
            android:id="@+id/ic_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:contentDescription="@string/search"
            android:padding="8dp"
            android:src="@drawable/ic_search" />

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/search_placeholder"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="#808080"
            android:importantForAutofill="no" />

    </LinearLayout>

    <TextView
        android:id="@+id/offers_for_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/LinearLayoutSearch"
        android:text="@string/offers_for_"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:textAppearance="@style/home_titles" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/offers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/offers_for_">

        <ImageView
            android:id="@+id/hc_offer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hc_offer"
            android:contentDescription="@string/image"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/door_handle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="@id/hc_offer"
            app:layout_constraintBottom_toBottomOf="@id/hc_offer" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/services"
        android:textAppearance="@style/home_titles"
        android:layout_below="@+id/offers" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:layout_below="@id/services"
        android:rowCount="2">

        <!-- First CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image"
                    android:src="@drawable/pm_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/packers_and_movers"
                    android:textColor="@color/black"
                    android:padding="8dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Second CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image"
                    android:src="@drawable/hc_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_cleaning"
                    android:textColor="@color/black"
                    android:padding="8dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Third CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image"
                    android:src="@drawable/repairs_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repairs"
                    android:textColor="@color/black"
                    android:padding="8dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Fourth CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image"
                    android:src="@drawable/painting_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/painting"
                    android:textColor="@color/black"
                    android:padding="8dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/dark_green"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>